# rust-vsc-wokwi-esp32-aa

./: .gitignore  README.md  wokwi-vsc-fw--hide
git-util/: justmake.sh  makebranch.sh
program-aa/: Cargo.toml  Makefile  wokwi.toml
program-aa/src/: main.rs
tq/: .gitignore
tq/0-Distrib.d/: sha1sum_publish-aa-nis-rust-wokwi-esp32-03-JAN-2024-aa2-dot-zip.txt
tq/doc/: pins_esp32.txt
trial_ka_tt/: .gitignore  Cargo.toml  Makefile  diagram.json  n.READY.FOR.RELEASE  wokwi.toml
trial_ka_tt/src/: main.rs  problem.list.txt
trial_kb_aa/: Cargo.toml  Makefile  n.READY.FOR.RELEASE  wokwi.toml
trial_kb_aa/doc/: INITIAL_USE
trial_kb_aa/src/: .gitignore  main.rs
